Added submit button

--- a/week7/day01/bank/src/main/resources/templates/index.html
+++ b/week7/day01/bank/src/main/resources/templates/index.html
@@ -5,31 +5,37 @@
   <meta charset="utf-8"/>
 </head>
 <body>
-<td>
-  <table>
-    <tr>
-      <th>Index</th>
-      <th>Name</th>
-      <th>Balance</th>
-      <th>Animal Type</th>
-      <th>King</th>
-      <th>Bad or Good</th>
-    </tr>
-    <tr th:each="animal : ${animalList}" th:style="${animal.isKing() ? 'background-color:yellow':'background-color:grey'}">
-      <td th:utext="${animalStat.count}"></td>
-      <td th:utext="${animal.getName()}"></td>
-      <td th:utext="${animal.getBalance()}"></td>
-      <td th:utext="${animal.getAnimalType()}"></td>
-      <td th:utext="${animal.isKing()}"></td>
-      <th:block th:switch="${animal.isBad()}">
-        <td th:case="true">Bad guy</td>
-        <td th:case="false">Good guy</td>
-      </th:block>
-    </tr>
-  </table>
-  <form th:action="@{/add}" th:object="${animalList}" th:method="addPlusMoney">
-    <button>Submit</button>
-  </form>
+<table>
+  <tr>
+    <th>Index</th>
+    <th>Name</th>
+    <th>Balance</th>
+    <th>Animal Type</th>
+    <th>King</th>
+    <th>Bad or Good</th>
+  </tr>
+  <tr th:each="animal : ${animalList}"
+      th:style="${animal.isKing() ? 'background-color:yellow':'background-color:grey'}">
+    <td th:utext="${animalStat.index}"></td>
+    <td th:utext="${animal.getName()}"></td>
+    <td th:utext="${animal.getBalance()}"></td>
+    <td th:utext="${animal.getAnimalType()}"></td>
+    <td th:utext="${animal.isKing()}"></td>
+    <th:block th:switch="${animal.isBad()}">
+      <td th:case="true">Bad guy</td>
+      <td th:case="false">Good guy</td>
+    </th:block>
+  </tr>
+</table>
+<div>
+<form th:action="@{/raise}" method="post">
+  <label>Raise the balance of a selected animal:</label>
+  <select name="animalIndex">
+    <option th:each="account : ${animalList}" th:text="${account.getName()}"
+            th:value="${accountStat.index}"></option>
+  </select>
+  <input type="submit" value="Raise Balance">
+</form>
 </div>
 </body>
 </html>
