--- a/week7/day04/club/src/main/resources/templates/index.html
+++ b/week7/day04/club/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <li><a th:href="@{/information/}">Information</a></li>
 <img th:src="@{/greenfox.png}" /> <br>
 <li><a th:href="@{/login/}">Login</a></li>
-<p th:text="|This is ${name}. Currently living on ${food} and ${drink}.|"></p>
+<p th:text="|This is ${name}. Currently living on  and .|"></p>
 
 </body>
 </html>
