added timestamp, not on new posts yet

--- a/week8/day04/src/main/resources/templates/index.html
+++ b/week8/day04/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
       <td><a th:href="@{'/downvote/' + ${post.id}}">-</a></td>
     </form>
     <td><a th:href="${post.getUrl()}" th:text="${post.getTitle()}" target="_blank"></a></td>
+    <td th:text="${post.getCreatedAt()}"></td>
   </tr>
 </table>
 
